# calc-console-utility

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
db/: init.sql
include/: cache.hpp  calculator.hpp  checker.hpp  data.hpp  json_loader.hpp  logger.hpp  parser.hpp  pq_shell.hpp  printer.hpp  runner.hpp
input/: add.json  fac.json  field_not_integer.json  invalid_json.json  misssing_required_field.json  opr_missing.json  opr_not_string.json  test1.json  test2.json  test3.json  test4.json  test5.json  test8.json  test9.json  unknown_opr.json
src/: cache.cpp  calc_console_utility.cpp  calculator.cpp  checker.cpp  json_loader.cpp  logger.cpp  main.cpp  parser.cpp  pq_shell.cpp  printer.cpp  runner.cpp
tests/: calculator_tests.cpp  checker_tests.cpp  json_loader_tests.cpp  parser_tests.cpp
